@@ -168,9 +168,9 @@ void MIDI_Task(void)
 			USB_MIDI_EventPacket_t MIDIEvent = (USB_MIDI_EventPacket_t)
 				{
 					.CableNumber = 0,
-					.Command     = MIDICommand,
+					.Command     = (MIDICommand >> 4),
 					
-					.Data1       = (MIDICommand << 4) | Channel,
+					.Data1       = MIDICommand | Channel,
 					.Data2       = MIDIPitch,
 					.Data3       = MIDI_STANDARD_VELOCITY,			
 				};
