@@ -60,10 +60,10 @@
 		#define MIDI_JACKTYPE_EXTERNAL      0x02
 
 		/** MIDI command for a note on (activation) event */
-		#define MIDI_COMMAND_NOTE_ON        0x09
+		#define MIDI_COMMAND_NOTE_ON        0x90
 
 		/** MIDI command for a note off (deactivation) event */
-		#define MIDI_COMMAND_NOTE_OFF       0x08
+		#define MIDI_COMMAND_NOTE_OFF       0x80
 
 		/** Standard key press velocity value used for all note events */
 		#define MIDI_STANDARD_VELOCITY      64
